--- a/views/dashboard/article.ejs
+++ b/views/dashboard/article.ejs
@@ -1,55 +1,32 @@
 <% extend('../layout/dashboard-layout') %>
 
-<form 
-  method="POST" 
-  class="row justify-content-center">
-  <div class="col-md-6">
-    
 
-    
+<form action="/dashboard/article/creat" method="POST" class="row justify-content-center">
+  <div class="col-md-6">
     <label for="title">請輸入標題</label>
     <input type="text" id="title" class="form-control" name="title" placeholder="標題" value="">
     <hr>
+
+  <!-- todo 文字編輯器 -->
     <textarea name="content" id="editor" class="form-control">
-      
     </textarea>
     <script>
 			CKEDITOR.replace( 'content' );
 		</script>
   </div>
+
   <div class="col-md-3">
-    
     <div class="card mb-3">
       <h6 class="card-header">分類</h6>
       <div class="card-body">
-        
-          <div class="form-check">
-            <label class="form-check-label">
-              <input class="form-check-input" type="radio" name="category" required value="-L2TajOWL1ycB_hwyiK-" 
-                
-                >
-              心得
-            </label>
-          </div>
-        
-          <div class="form-check">
-            <label class="form-check-label">
-              <input class="form-check-input" type="radio" name="category" required value="-L2VDz-ovFCKMA34kfdY" 
-                
-                >
-              課程 
-            </label>
-          </div>
-        
-          <div class="form-check">
-            <label class="form-check-label">
-              <input class="form-check-input" type="radio" name="category" required value="-L3VkF87JcRmUUjxhi0g" 
-                
-                >
-              新聞
-            </label>
-          </div>
-        
+          <% for( let index in name ) { %>
+            <div class="form-check">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" name="category" required value="<%= index %> " >
+                <%= name[index].name %> 
+              </label>
+            </div>
+          <% } %>
       </div>
     </div>
 
@@ -71,4 +48,5 @@
       <button type="submit" class="btn btn-outline-primary w-100">儲存</button>
     </div>
   </div>
+
 </form>
