--- a/views/dashboard/categories.ejs
+++ b/views/dashboard/categories.ejs
@@ -2,13 +2,10 @@
 
 <div class="row justify-content-center">
   <div class="col-md-6">
-    
-    <% if (hasMessage) { %>
-      <% for( let j in messages ) { %>
-        <!-- <div class="alert alert-warning"> -->
-          <%- message[j] %>
-        <!-- </div> -->
-      <% } %>
+    <% if (messages.length > 0) { %>
+      <div class="alert alert-warning">
+        <%= messages %>
+      </div>
     <% } %>
     <table class="table">
       <thead>
