--- a/views/dashboard/article.ejs
+++ b/views/dashboard/article.ejs
@@ -1,14 +1,33 @@
 <% extend('../layout/dashboard-layout') %>
 
+<% if (article === undefined) {
+  var article = { }
+} %>
 
-<form action="/dashboard/article/creat" method="POST" class="row justify-content-center">
+
+<form 
+  <% if(article.id) { %>
+    action="/dashboard/article/creat/:<%= article.id %>"
+  <% } else { %>
+    action="/dashboard/article/creat"
+  <% } %>
+  method="POST" class="row justify-content-center"
+>
   <div class="col-md-6">
     <label for="title">請輸入標題</label>
-    <input type="text" id="title" class="form-control" name="title" placeholder="標題" value="">
+    <% if(article) { %>
+      <input type="text" id="title" class="form-control" name="title" 
+        placeholder="標題"
+        value="<%= article.title %>"
+      >
+    <% } %>
     <hr>
 
   <!-- todo 文字編輯器 -->
     <textarea name="content" id="editor" class="form-control">
+      <% if(article) {%>
+        <%- article.content %> 
+      <% } %> 
     </textarea>
     <script>
 			CKEDITOR.replace( 'content' );
@@ -22,7 +41,10 @@
           <% for( let index in name ) { %>
             <div class="form-check">
               <label class="form-check-label">
-                <input class="form-check-input" type="radio" name="category" required value="<%= index %> " >
+                <input class="form-check-input" type="radio" name="category"
+                <%= index === article.category  ? 'checked' : '' %> 
+                required value="<%= index %>"
+                >
                 <%= name[index].name %> 
               </label>
             </div>
@@ -34,11 +56,22 @@
       <h6 class="card-header">是否公開</h6>
       <div class="card-body">
         <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
-          <label class="btn btn-outline-primary w-100 ">
-            <input type="radio" name="status" autocomplete="off" value="draft"  > 草稿
+          <label class="btn btn-outline-primary w-100 <% if (article.status === 'draft') { %>
+           active
+          <% } %>">
+            <input type="radio" name="status" autocomplete="off" value="draft" 
+            <% if (article.status === 'draft') { %>
+              checked
+            <% } %>"
+            > 草稿
           </label>
-          <label class="btn btn-outline-primary w-100 ">
-            <input type="radio" name="status" autocomplete="off" value="public"  > 公開
+          <label class="btn btn-outline-primary w-100 <% if (article.status === 'public') { %>
+            active
+           <% } %>"">
+            <input type="radio" name="status" autocomplete="off" value="public"
+            <% if (article.status === 'public') { %>
+              checked
+            <% } %>"> 公開
           </label>
         </div>
       </div>
