--- a/views/dashboard/signup.ejs
+++ b/views/dashboard/signup.ejs
@@ -3,27 +3,54 @@
 <div class="row justify-content-center">
   <div class="col-sm-6">
 
-    <form method="POST" action="/auth/signup">
+    <form method="POST" action="/auth/signup/creat">
+      <!-- todo 註冊帳號 -->
       <div class="form-group">
         <label for="exampleInputEmail1">Email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="請輸入 email"
-          required>
-        <small id="emailHelp" class="form-text text-muted">我們不會隨意散佈你的 Email</small>
+        <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="請輸入 email" required>
+          <% for( let i in message ) { %>
+            <small id="emailHelp" class="form-text text-danger">
+              <% if (message[i] === '請輸入有效郵件!!!' || message[i] === '此郵件已註冊過摟!!!') { %>
+                <%= message %>
+              <% } %>
+            </small>
+          <% } %>
       </div>
+
+      <!-- todo 註冊密碼 -->
       <div class="form-group">
         <label for="password">密碼</label>
         <input type="password" class="form-control" id="password" name="password" placeholder="請輸入密碼" required>
+        <small id="passwordHelp" class="form-text text-danger">
+          <% for( let i in message ) { %>
+            <% if (message[i] === '密碼至少六個字元!!!') { %>
+              <%= message[i] %>
+            <% } %>
+          <% } %>
+        </small>
       </div>
+
+      <!-- todo 確認密碼 -->
       <div class="form-group">
         <label for="confirm_password">確認密碼</label>
         <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="確認密碼" required>
+        <small id="comfirmPass" class="form-text text-danger">
+          <% for( let i in message ) { %>
+            <% if (message[i] === '請輸入相同的密碼><') { %>
+              <%= message[i] %>
+            <% } %>
+          <% } %>
+        </small>
       </div>
+
+      <!-- todo chekBox -->
       <div class="form-check">
         <input type="checkbox" class="form-check-input" id="confirm" required>
         <label class="form-check-label" for="confirm">請確認你了解這是自己做的 Blog</label>
       </div>
+
       <div class="text-right mt-3">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">註冊</button>
       </div>
     </form>
   </div>
