--- a/views/dashboard/signin.ejs
+++ b/views/dashboard/signin.ejs
@@ -8,12 +8,25 @@
         <label for="exampleInputEmail1">Email</label>
         <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="請輸入 email"
           required>
-        <small id="emailHelp" class="form-text text-muted">我們不會隨意散佈你的 Email</small>
+        <small id="emailHelp" class="form-text text-danger">
+            <% for( let i in error ) { %>
+                <% if (error[i] === '此帳號尚未註冊或是輸入錯誤!') { %>
+                    <%= error[i] %>
+                <% } %> 
+            <% } %>
+        </small>
       </div>
       <div class="form-group">
         <label for="password">密碼</label>
         <input type="password" class="form-control" id="password" name="password" placeholder="請輸入密碼" required>
-      </div>
+        <small id="passwordHelp" class="form-text text-danger">
+            <% for( let i in error ) { %>
+                <% if (error[i] === '密碼輸入錯誤!') { %>
+                    <%= error[i] %>
+                <% } %> 
+            <% } %>
+        </small>
+    </div>
       <div class="text-right mt-3">
         <button type="submit" class="btn btn-primary">登入</button>
       </div>
