--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>六角部落格 | Bootstrap 4 繁體中文手冊</title>
+  <title>UnderBlog</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #00cc99;">
     <a class="navbar-brand" href="/">
       <i class="fa fa-diamond" aria-hidden="true"></i>
-      六角部落格
+      UnderBlog
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
   <footer class="bg-light text-muted py-5">
     <div class="container">
       <ul class="list-unstyled d-flex justify-content-between">
-        <li class="">© Copright 2017 六角部落格</li>
+        <li class="">© Copright 2020 Corgi</li>
         <li class="ml-auto"><a class="text-info mr-1" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a> <a class="text-info mr-1" href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a> <a href="" class="text-info"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
       </ul>
     </div>
